# RaylibGameTemplate

./: CMakeLists.txt  README.md
src/: constants.h  main.cpp
src/ecs/: ComponentArray.cpp  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  EntityManager.cpp  EntityManager.h  SpriteAnimationSystem.cpp  SpriteSystem.cpp  SystemManager.h  TransformSystem.cpp  components.h
src/scene/: Scene.cpp  Scene.h  SceneID.h  TitleScreen.cpp
src/util/: TexturePool.cpp  TexturePool.h  hash.cpp  hash.h  types.h
